--- a/static/css/index.css
+++ b/static/css/index.css
@@ -43,6 +43,7 @@
   align-items: center;
   vertical-align: top;
   min-height: 5px;
+  max-height: auto;
   /* Crucial : aligne le haut des conteneurs */
   text-align: center;
   margin: 0 10px;
@@ -65,6 +66,7 @@
   /* Assez pour 2 lignes */
   margin-top: auto;
   margin-bottom: 0;
+  vertical-align: top !important;
   height: auto;
   line-height: 1;
   font-size: 0.9em;
